no more cards on mobile, fixed hero image

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -25,9 +25,16 @@
     position: relative;
     z-index: 4;
     background-image: image_url('thumbs_up_hero_desktop.jpg');
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 135px;
+
+    @media only screen and (max-width: $xs-max-width) {
+      background-image: image_url('thumbs_up_hero_mobile.jpg');
+      height: 100vh !important;
+      padding-top: 65vh !important;
+    }
   }
 
   .card-two {
@@ -99,9 +106,11 @@
       font-size: 1.8rem;
     }
 
-    @media only screen and (max-width: $xs-max-width) { // xs
+    @media only screen and (max-width: $xs-max-width) {
       padding-top: $navbar-height + 50px;
       padding-bottom: $navbar-height + 50px;
+      position: relative;
+      height: auto;
 
       h1,
       h1 strong {
